--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Api da aplicação de turismo Poraque",
   "main": "server.js",
   "scripts": {
-    "test": "test",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest"
   },
   "type": "module",
   "repository": {
@@ -24,6 +24,9 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@babel/preset-env": "^7.20.2",
+    "jest": "^29.4.1",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   }
 }
