--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "homepage": "https://github.com/Poraque/Poraque-api#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
